--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
 
 <body>
 
-    <div class="red"></div>
-    <div class="green"></div>
-    <div class="yellow"></div>
+    <div class="yellow_text">
+        <div class="red"><img id="diff" src="img/01.png" alt="diff">
+            IL NOSTRO MODELLO DI PUNTA
+        </div>
+        <div class="green"><img id="tom" src="img/02.png" alt="tom">
+            IL NOSTRO MODELLO DI PUNTA
+        </div>
+        <div class="yellow"><img id="conv" src="img/03.png" alt="conv">
+            <span id="green_text">IL NOSTRO MODELLO DI PUNTA</span>
+        </div>
+    </div>
 
 </body>
 
