--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
 <body>
 
-    <div class="yellow_text">
-        <div class="red"><img id="diff" src="img/01.png" alt="diff">
-            IL NOSTRO MODELLO DI PUNTA
-        </div>
-        <div class="green"><img id="tom" src="img/02.png" alt="tom">
-            IL NOSTRO MODELLO DI PUNTA
-        </div>
-        <div class="yellow"><img id="conv" src="img/03.png" alt="conv">
-            <span id="green_text">IL NOSTRO MODELLO DI PUNTA</span>
-        </div>
+    <div class="red"><img id="diff" src="img/01.png" alt="diff">
+        <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+    </div>
+    <div class="green"><img id="tom" src="img/02.png" alt="tom">
+        <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+    </div>
+    <div class="yellow"><img id="conv" src="img/03.png" alt="conv">
+        <h1 id="green_text">IL NOSTRO MODELLO DI PUNTA</h1>
     </div>
 
 </body>
