--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes</title>
+    <!-- Font: Rubik Mono One -->
     <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,12 +16,24 @@
 
 <body>
 
+    <!-- Navbar -->
+    <nav>
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+    </nav>
+
+    <!-- Red promo banner "Diff" shoe -->
     <div class="red"><img id="diff" src="img/01.png" alt="diff">
         <h1>IL NOSTRO MODELLO DI PUNTA</h1>
     </div>
+
+    <!-- Green promo banner "Tom" shoe -->
     <div class="green"><img id="tom" src="img/02.png" alt="tom">
         <h1>IL NOSTRO MODELLO DI PUNTA</h1>
     </div>
+
+    <!-- Yellow promo banner "Conv" shoe -->
     <div class="yellow"><img id="conv" src="img/03.png" alt="conv">
         <h1 id="green_text">IL NOSTRO MODELLO DI PUNTA</h1>
     </div>
