--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
 
     <!-- Red promo banner "Diff" shoe -->
     <div class="red"><img id="diff" src="img/01.png" alt="diff">
-        <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+        <h1>IL NOSTRO MODELLO <br> DI PUNTA</h1>
     </div>
 
     <!-- Green promo banner "Tom" shoe -->
     <div class="green"><img id="tom" src="img/02.png" alt="tom">
-        <h1>IL NOSTRO MODELLO DI PUNTA</h1>
+        <h1>IL NOSTRO MODELLO <br> DI PUNTA</h1>
     </div>
 
     <!-- Yellow promo banner "Conv" shoe -->
     <div class="yellow"><img id="conv" src="img/03.png" alt="conv">
-        <h1 id="green_text">IL NOSTRO MODELLO DI PUNTA</h1>
+        <h1 id="green_text">IL NOSTRO MODELLO <br> DI PUNTA</h1>
     </div>
 
 </body>
