Replaced id shoes with a class

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     </nav>
 
     <!-- Red promo banner "Diff" shoe -->
-    <div class="red"><img id="diff" src="img/01.png" alt="diff">
+    <div class="red"><img class="shoes" src="img/01.png" alt="diff">
         <h1>IL NOSTRO MODELLO <br> DI PUNTA</h1>
     </div>
 
     <!-- Green promo banner "Tom" shoe -->
-    <div class="green"><img id="tom" src="img/02.png" alt="tom">
+    <div class="green"><img class="shoes" src="img/02.png" alt="tom">
         <h1>IL NOSTRO MODELLO <br> DI PUNTA</h1>
     </div>
 
     <!-- Yellow promo banner "Conv" shoe -->
-    <div class="yellow"><img id="conv" src="img/03.png" alt="conv">
+    <div class="yellow"><img class="shoes" src="img/03.png" alt="conv">
         <h1 id="green_text">IL NOSTRO MODELLO <br> DI PUNTA</h1>
     </div>
 
